# StockyBoy

./: .gitignore  CMakeLists.txt  README.md  StockyBoy.sln  main.cpp
5PercentRule-Bot/: 5PercentRule-Bot.vcxproj  5PercentRule-Bot.vcxproj.filters  CMakeLists.txt  pch.h
5PercentRule-Bot/Headers/: 5PercentBot.hpp
5PercentRule-Bot/Headers/Utils/: ExtractTickers.py  ticker_labels.hpp
5PercentRule-Bot/src/: 5PercentBot.cpp  README.md
Interface/: CMakeLists.txt  Interface.vcxproj  Interface.vcxproj.filters  imgui.ini  log.txt
Interface/Headers/: Application.hpp
Interface/src/: Application.cpp  CREDITENTIALS-5Percent.txt  main.cpp
StockScraper/: CMakeLists.txt  StockScraper.vcxproj  StockScraper.vcxproj.filters  pch.h
StockScraper/Headers/: Alpaca.hpp  Fetch.hpp  Result.hpp  StockData.hpp  Types.hpp
StockScraper/Headers/Utils/: StockMath.hpp
StockScraper/src/: Alpaca.cpp  Fetch.cpp  StockData.cpp  StockMath.cpp  Types.cpp
